--- a/cosmo/public/css/sidebar.css
+++ b/cosmo/public/css/sidebar.css
@@ -1,18 +1,15 @@
 body {
-    background-color: #121212;
-    color: #ffffff;
+    background-image: url('/spacebg0.png');
+    background-size: contain; /* atau 'contain' kalau mau gambar utuh */
+    background-repeat: repeat;
     margin: 0;
+    color: white;
 }
 
 .sidebar a.nav-link {
     padding: 10px 15px;
     border-radius: 10px;
     transition: background-color 0.2s;
-}
-
-.sidebar a.nav-link:hover {
-    background-color: #343a40;
-    text-decoration: none;
 }
 
 .sidebar img {
@@ -27,9 +24,27 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #1f1f1f;
     padding: 20px 10px; /* jangan kasih terlalu besar padding-left */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    background-image: url('/space0.png');
+    background-size: cover; /* atau 'contain' kalau mau gambar utuh */
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.sidebar a.nav-link:hover {
+    background-color: rgba(0, 0, 0, 0.5); /* 0.5 = 50% opacity */
+    text-decoration: none;
+}
+
+.logo-img {
+    display: block;
+    margin: 0 auto 20px auto;
+    width: 100%;
+    max-width: 150px;
+    height: auto;
+    object-fit: contain;
 }
