Tambahan Commit 6 Claudio: fix error

--- a/cosmo/public/css/sidebar.css
+++ b/cosmo/public/css/sidebar.css
@@ -15,7 +15,8 @@ body {
 .sidebar a.nav-link:hover {
     background-color: #343a40;
     text-decoration: none;
-  
+}
+
 .sidebar img {
     display: block;
     margin-left: auto;
