--- a/cosmo/public/css/authh.css
+++ b/cosmo/public/css/authh.css
@@ -1,4 +1,4 @@
-.my-alert-error {
+.alerttt {
     background-color: #ffe5e5;
     border-left: 4px solid #ff5a5a;
     padding: 12px;
@@ -8,7 +8,7 @@
     border-radius: 4px;
 }
 
-.my-alert-success {
+.alertsucc {
     background-color: #e6ffea;
     border-left: 4px solid #2ecc71;
     padding: 12px;
@@ -16,11 +16,6 @@
     font-size: 0.95rem;
     margin-bottom: 16px;
     border-radius: 4px;
-}
-
-.my-alert-error ul {
-    margin: 0;
-    padding-left: 20px;
 }
 
 .center-actions {
